# folio

./: .gitignore  README.md  docker-compose.dev.yml  email-details.md  package-lock.json  package.json  reset-dev-data.bat  run-dev.bat  style.md
services/ai-service/: .env.example  .gitignore  Dockerfile  README.md  keyword_extraction.py  pyproject.toml
services/ai-service/app/: __init__.py  config.py  main.py
services/ai-service/app/api/: classify.py  health.py  similar.py  v1.py
services/ai-service/app/dependencies/: service_token.py
services/ai-service/app/grpc/: __init__.py  errors.py  interceptors.py  keyword_servicer.py  plagiarism_servicer.py  reviewer_servicer.py  server.py  servicer.py  similarity_servicer.py
services/ai-service/app/ml/: __init__.py  arabic_classifier.py  paths.py
services/ai-service/app/providers/: __init__.py  base.py  noop.py  openai_compat.py  registry.py
services/ai-service/app/schemas/: classify.py  keywords.py  search.py  similarity.py
services/ai-service/archive/: classify.ipynb  last file.ipynb  traning.ipynb
services/ai-service/scripts/: demo_reviewer_matching.py  demo_vector.py  verify_classifier.py
services/ai-service/tests/: conftest.py  test_classifier_integration.py  test_classifier_warmup.py  test_classify_api.py  test_config.py  test_grpc_classify.py  test_grpc_keywords.py  test_grpc_plagiarism.py  test_grpc_reviewer.py  test_grpc_similarity.py  test_health.py  test_openai_compat.py  test_paths.py  test_reviewer_ingestion_service.py  test_reviewer_matching_service.py  test_scoring.py  test_similarity_api.py
(+558 files in other folders)
