[project]
name = "folio-ai-service"
version = "0.1.0"
description = "Folio AI microservice: FastAPI scaffold with pluggable LLM providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "openai>=1.55.0",
  "python-dotenv>=1.0.0",
  "grpcio>=1.68.0",
  "grpcio-status>=1.68.0",
  "protobuf>=6.31.1,<7.0dev",
]

[project.optional-dependencies]
ml = [
  "torch>=2.5.0",
  "transformers>=4.46.0",
  "arabert>=1.0.1",
  "safetensors>=0.4.0",
]
similarity = [
  "chromadb>=0.5.0",
  "sentence-transformers>=3.3.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "grpcio-reflection>=1.68.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "ml: full AraBERT inference (requires pip install -e \".[ml]\" and local weights)",
  "similarity: Chroma + sentence-transformers (requires pip install -e \".[similarity]\")",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/grpc/gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
